# MatrixCompilerPim

./: .replit  CMakeLists.txt  README.md  pyproject.toml  replit.nix
examples/: matrix_mult.cpp  unoptimized_matrix_mult.cpp  unoptimized_matrix_mult_refactored.cpp
include/: CompilerConfig.h  PIMInstructionSet.h
src/: main.cpp
src/compiler/: IRGenerator.cpp  IRGenerator.h  MemoryMapper.cpp  MemoryMapper.h  PIMBackend.cpp  PIMBackend.h  PIMInstruction.cpp  PIMInstruction.h  Parser.cpp  Parser.h
src/optimizer/: RefactoringAssistant.cpp  RefactoringAssistant.h
src/utils/: Logger.cpp  Logger.h
test/: test_memory_mapper.py  test_pim_backend.py
